@@ -21,6 +21,10 @@ Changes
 Fixes
 =====
 
+ - Fixed validation so that ``SELECT DISTINCT`` can be used only if there
+   is no ``GROUP BY`` present or if the set of ``GROUP BY`` expressions is
+   the same as the set ``SELECT`` expressions.
+
  - Added validation that ``ORDER BY`` symbols are included in the ``SELECT``
    list when ``DISTINCT`` is used.
 
